[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://UI/images/title-screen-background.jpg" type="Texture" id=2]
[ext_resource path="res://UI/NewGameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/OptionsButton.tscn" type="PackedScene" id=4]

[node name="TitleScreen" type="MarginContainer"]
margin_right = 1280.0
margin_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )

[node name="BackgroundImage" type="TextureRect" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="MenuContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 524.0
margin_top = 226.0
margin_right = 756.0
margin_bottom = 494.0
alignment = 1

[node name="btn_newGame" parent="CenterContainer/MenuContainer" instance=ExtResource( 3 )]
margin_right = 232.0
text = "new_game"
script = null

[node name="btn_continueGame" parent="CenterContainer/MenuContainer" instance=ExtResource( 3 )]
margin_top = 68.0
margin_right = 232.0
margin_bottom = 132.0
text = "continue"
script = null

[node name="btn_options" parent="CenterContainer/MenuContainer" instance=ExtResource( 4 )]
margin_top = 136.0
margin_right = 232.0
margin_bottom = 200.0
text = "options"
script = null

[node name="btn_quit" parent="CenterContainer/MenuContainer" instance=ExtResource( 4 )]
margin_top = 204.0
margin_right = 232.0
margin_bottom = 268.0
text = "quit"
script = null

